# icnft-experiment

./: .env.dist  README.md  pyproject.toml
src/: sample.py  settings.py
src/domain/repository/: __init__.py  repository.py  repository_repository.py
src/infrastructure/dfinity/repository_repository/: repository_repository.py
src/use_case/transaction/: transaction_query_service.py  transaction_query_use_case.py
